--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "core-js": "^3.6.5",
     "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
